preview fix
